Исходники перемещены в src.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,21 +10,4 @@ find_package(Boost COMPONENTS system REQUIRED)
 
 add_subdirectory(external)
 
-add_executable(court_monitor
-	Bot.cpp
-	BotSession.cpp
-	CourtApi.cpp
-	Dialog.cpp
-	Logger.cpp
-	Storage.cpp
-	SubscribeCaseDialog.cpp
-	main.cpp
-	)
-target_link_libraries(court_monitor
-	banana-beast
-	fmt::fmt
-	nlohmann_json::nlohmann_json
-	certify::core
-	Boost::system
-	${OPENSSL_LIBRARIES}
-	)
+add_subdirectory(src)
